# Dojos

./: README.md
2015-10/: README.md
2015-10-Calculator/haskell/: README.md
2015-10-Calculator/haskell/calculator/: calculator.cabal
2015-10-Calculator/haskell/calculator/src/: Lib.hs
2015-10-Calculator/haskell/calculator/test/: Spec.hs
2015-11/: README.md
2015-11-Primes/: README.md  build.sbt
2015-11-Primes/src/main/scala/: main.scala
2015-11-Primes/src/test/scala/: Test.scala
2015-12-longest-sum-of-consecutive-primes/: README.md
2015-12-longest-sum-of-consecutive-primes/Clojure/primesum/: LICENSE  README.md  project.clj
2015-12-longest-sum-of-consecutive-primes/Clojure/primesum/src/primesum/: core.clj
2015-12-longest-sum-of-consecutive-primes/Clojure/primesum/test/primesum/: core_test.clj
2015-12-longest-sum-of-consecutive-primes/Haskell/: prime_sum.hs
2015-12-longest-sum-of-consecutive-primes/Scala/src/main/scala/: main.scala
2015-12-longest-sum-of-consecutive-primes/Scala/src/test/scala/: PrimeSpec.scala
2016-01-DataMunging/src/main/scala/dojo/: Football.scala  Parser.scala  Weather.scala
2016-03-SimpleLists/Scala/: README.md  build.sbt
2016-03-SimpleLists/haskell/: lists-dojo.cabal  stack.yaml
2016-03-SimpleLists/haskell/app/: Main.hs
2016-03-SimpleLists/haskell/src/: Lists.hs
2016-03-SimpleLists/haskell/test/: Spec.hs
2016-05-WordChains/: README.md
2016-07-Powerset/: README.md  build.sbt
2016-07-Powerset/src/main/scala/: Powerset.scala
2016-07-Powerset/src/test/scala/: PowersetSpec.scala
(+8 files in other folders)
