name:                calculator
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/Functional-Programming-Graz/Dojos/tree/master/2015-10-Calculator/haskell
license:             OtherLicense
license-file:        UNLICENSE
author:              Philipp Gabler
maintainer:          phips.gabler@gmail.com
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , mtl
  default-language:    Haskell2010

executable calculator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , calculator
  default-language:    Haskell2010

test-suite calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , calculator
                     , QuickCheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
